Solved day 2