@@ -3,6 +3,7 @@ package Util;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -11,21 +12,21 @@ public class PuzzleInput {
 
     public static List<String> getInput(String resourcePath) {
         try (BufferedReader reader = new BufferedReader(new InputStreamReader(Objects.requireNonNull(PuzzleInput.class.getClassLoader().getResourceAsStream(resourcePath))))) {
-            return reader.lines().collect(Collectors.toList());
+            return reader.lines().toList();
         } catch (IOException e) {
             e.printStackTrace();
         }
-        return null;
+        return new ArrayList<>();
     }
 
     public static List<Integer> getDay1Input() {
         List<String> rawInput = getInput("AoC2019/input/day1.txt");
-        return Objects.requireNonNull(rawInput).stream().map(Integer::valueOf).collect(Collectors.toList());
+        return Objects.requireNonNull(rawInput).stream().map(Integer::valueOf).toList();
     }
 
     public static List<Integer> getDay2Input() {
         List<String> rawInput = getInput("AoC2019/input/day2.txt");
-        return Objects.requireNonNull(rawInput).stream().map(Integer::valueOf).collect(Collectors.toList());
+        return Objects.requireNonNull(rawInput).stream().map(Integer::valueOf).toList();
     }
 
     public static List<String> getDay3Input() {
@@ -34,7 +35,7 @@ public class PuzzleInput {
 
     public static List<Integer> getDay4Input() {
         List<String> rawInput = getInput("AoC2019/input/day4.txt");
-        return Objects.requireNonNull(rawInput).stream().map(Integer::valueOf).collect(Collectors.toList());
+        return Objects.requireNonNull(rawInput).stream().map(Integer::valueOf).toList();
     }
 
     public static String getDay5Input() {
